# action-items

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/auth/: gmail_auth.py
src/email/: __init__.py  gmail_client.py  models.py
src/utils/: __init__.py  state.py
